Reduce whitespace in messages in inbox blocktypes (bug #630371)

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -214,6 +214,9 @@ table.fixwidth {
     white-space: pre-wrap;
     overflow: auto;
 }
+.messagebody-newpost, .messagebody-feedback {
+    white-space: normal;
+}
 /* table without border */
 #bloglist th {
 	border: 0;
